--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Faberfood"
-        tools:targetApi="31">
+        tools:targetApi="34">
         <activity
             android:name=".ListProductsActivity"
             android:exported="false" />
@@ -28,7 +28,7 @@
             android:name=".SignupActivity"
             android:exported="false" />
         <activity
-            android:name=".ShoppingCart"
+            android:name=".ShoppingCartActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
