ADD : Se agrega geolocalización

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,12 +26,12 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="YOUR_API_KEY" />
+            android:value="@string/google_maps_key"/>
 
         <activity
             android:name=".StoreLocationActivity"
             android:exported="false"
-            android:label="@string/title_activity_store_location" />
+            android:label="@string/title_activity_store_location"/>
         <activity
             android:name=".ListProductsActivity"
             android:exported="true">
