--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Nov 19 19:12:42 COT 2023
-sdk.dir=C\:\\Users\\jeimi\\AppData\\Local\\Android\\Sdk
+#Tue Nov 21 22:13:08 COT 2023
+sdk.dir=C\:\\Users\\HP USER\\AppData\\Local\\Android\\Sdk
